feat: Add Pinecone integration for cloud deployment
- Add Pinecone vector store for production (query-only)
- Create embedding pipeline script for local indexing
- Update retriever to support both Pinecone and ChromaDB
- Add render.yaml for Render deployment (free tier)
- Beautify frontend with TrueLinks-inspired dark theme
- Update configuration for dual backend support

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
 # API Keys
 ANTHROPIC_API_KEY=sk-ant-your-key-here
 OPENAI_API_KEY=sk-your-key-here
+PINECONE_API_KEY=your-pinecone-api-key
 
 # Environment
 ENVIRONMENT=development
 
-# Optional: ChromaDB persistence path
+# Vector Store Backend: "chroma" (local) or "pinecone" (production)
+VECTOR_STORE_BACKEND=chroma
+
+# Pinecone Configuration (for production)
+PINECONE_INDEX_NAME=construction-specs
+
+# Optional: ChromaDB persistence path (for local development)
 CHROMA_PERSIST_DIR=./chroma_db
