--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "construction-submittal-agent"
 version = "0.1.0"
-description = "Add your description here"
+description = "AI-powered Construction Submittal Review Agent"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -14,6 +14,7 @@ dependencies = [
     "llama-index-vector-stores-chroma>=0.5.5",
     "openai>=2.15.0",
     "pillow>=12.1.0",
+    "pinecone>=5.0.0",
     "pydantic>=2.12.5",
     "pymupdf>=1.26.7",
     "python-dotenv>=1.2.1",
